--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 TuePlots = "7dc86ad5-723e-4492-bd0d-d0b58009a4c8"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
+WoodburyMatrices = "efce3f68-66dc-5838-9240-27a6d6f5f9b6"
 
 [compat]
 CUDA = "^5"
