--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 TuePlots = "7dc86ad5-723e-4492-bd0d-d0b58009a4c8"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
