--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 ComputationAwareKalman = "28881c16-bf71-4ba7-a6ec-419960c0da53"
 CovarianceFunctions = "b3329135-7958-41d4-bb02-e084c5a526bf"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GaussianDistributions = "43dcc890-d446-5863-8d1a-14597580bb8d"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
