--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 ComputationAwareKalman = "28881c16-bf71-4ba7-a6ec-419960c0da53"
 CovarianceFunctions = "b3329135-7958-41d4-bb02-e084c5a526bf"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
