--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
 Kronecker = "2c470bb0-bcc8-11e8-3dad-c9649493f05e"
+KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
@@ -39,4 +40,5 @@ WoodburyMatrices = "efce3f68-66dc-5838-9240-27a6d6f5f9b6"
 [compat]
 BenchmarkTools = "1.5.0"
 CUDA = "^5"
+KrylovKit = "0.8.3"
 julia = "1"
